2005-08-13  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-keyset.c: Fix bug where refreshing would cause a 
    bunch of spurious "added" or "removed" events. 
    * libseahorse/seahorse-dns-sd.c: DNS-SD now adds and removes key sources
    from the context properly. 
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-pgp-source.c: Prevent loops loading keys over and over.
    * src/seahorse-keyserver-results.c: Match remote keys properly
    * libseahorse/seahorse-check-button-control.c:
    * libseahorse/seahorse-dns-sd.c:
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-generate-druid.c:
    * src/seahorse-key-manager-store.c: Cleanup debug printing
    * libseahorse/seahorse-widget.c: Fix problem with SeahorseWidget destroying the
    internal GtkWidget twice.
    * src/seahorse-key-manager.c:
    * src/seahorse-keyserver-results.c: Set initial focus to tree view
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-operation.h: Rename seahorse_multi_operation_add
    to seahorse_multi_operation_take to reflect op ownership.
    * agent/seahorse-agent-status.c:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-default-key-control.c:
    * libseahorse/seahorse-default-key-control.h:
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-hkp-source.h:
    * libseahorse/seahorse-key-source.c:
    * libseahorse/seahorse-key-source.h:
    * libseahorse/seahorse-key-store.c:
    * libseahorse/seahorse-key-store.h:
    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-keyset.c:
    * libseahorse/seahorse-keyset.h:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-ldap-source.h:
    * libseahorse/seahorse-libdialogs.h: