@@ -1,5 +1,5 @@
-If you want to hack on seahorse, please ask on seahorse-devel@lists.sourceforge.net.
-Patches are preferred, and should be submitted on bugzilla.gnome.org if possible.
+If you want to hack or commit something to seahorse, please first send patches to 
+seahorse-devel@lists.sourceforge.net or submitted on bugzilla.gnome.org if possible.
 
 For a todo list, first check bugzilla, then look at TODO. Bugzilla is also updated 
 with possibe enhancements and any current bugs.
@@ -73,4 +73,4 @@ below, and must be discussed before hand on the seahorse-devel mailing list.
  o Export Secret Key Support 
    - (not yet implemented)
 
-last updated 2005-04-16
+last updated 2005-08-13
