@@ -19,6 +19,17 @@
  * Boston, MA 02111-1307, USA.
  */
 
+/**
+ * SeahorseKeyServerControl: A control which allows you to select from a set
+ * of keyservers. 
+ * 
+ * - Also displays shares for keys found via DNS-SD over the network.
+ * 
+ * Properties:
+ *   gconf-key: (gchar*) The GConf key to retrieve and set keyservers.
+ *   none-option: (gchar*) Text to display for 'no key server'
+ */
+ 
 #ifndef __SEAHORSE_KEYSERVER_CONTROL_H__
 #define __SEAHORSE_KEYSERVER_CONTROL_H__
 
