@@ -1,5 +1,7 @@
 2005-08-13  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * HACKING: Updated docs
+    * libseahorse/*.h: Added a little synopsis in each header.
     * libseahorse/seahorse-keyset.c: Fix bug where refreshing would cause a 
     bunch of spurious "added" or "removed" events. 
     * libseahorse/seahorse-dns-sd.c: DNS-SD now adds and removes key sources
